# mmf-labs

./: README.md
expressions/: CMakeLists.txt  addExpression.cpp  addExpression.h  divExpression.cpp  divExpression.h  expression.cpp  expression.h  main.cpp  mulExpression.cpp  mulExpression.h  numberExpression.cpp  numberExpression.h  powExpression.cpp  powExpression.h  subExpression.cpp  subExpression.h  variableExpression.cpp  variableExpression.h
list/: CMakeLists.txt  main.cpp  mylist.h
strings/: CMakeLists.txt  main.cpp  mystring.cpp  mystring.h
